# DCC

./: .clang-format  .clang-tidy  README.md  meson.build
dcc/: ast.cpp  ast.h  backend.cpp  bundle.cpp  bundle.h  chklib.cpp  comwrite.cpp  control.cpp  dataflow.cpp  dcc.cpp  dcc.h  disassem.cpp  disassem.h  dosdcc.h  error.cpp  error.h  fixwild.cpp  frontend.cpp  graph.cpp  graph.h  hlicode.cpp  hlicode.h  icode.cpp  icode.h  idioms.cpp  locident.cpp  locident.h  max.b  parser.cpp  perfhlib.cpp  perfhlib.h  procs.cpp  proplong.cpp  reducible.cpp  scanner.cpp  scanner.h  state.h  symtab.cpp  symtab.h  types.h  (+1 more)
makedsig/: MAKEDSIG.C
makedstp/: FIXWILD.C  MAKEDSTP.MAK  PERFHLIB.C  PERFHLIB.H
original/: readme.txt  readme_oo.txt
original/dccsrcoo/: Makefile
original/dispsrch/: DISPSIG.C  DISPSIG.MAK  DISPSRCH.TXT  SRCHSIG.C  SRCHSIG.MAK
original/makedsig/: MAKEDSIG.MAK  PERFHLIB.C
original/makedstp/: MAKEDSTP.C  MAKEDSTP.TXT
original/parsehdr/: LOCIDENT.H  PARSEHDR.H  PARSEHDR.TXT  PARSELIB.MAK  TCFILES.LST
original/readsig/: READSIG.C  READSIG.MAK
parsehdr/: PARSEHDR.C
readsig/: READSIG.TXT
